--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "download": "^5.0.3",
+    "events": "^1.1.1",
+    "fs-extra": "^2.0.0",
     "iconv": "^2.2.1",
     "superagent": "^3.5.0",
     "superagent-charset": "^1.1.1",
